# yalla

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.md.save  __init__.py  _version.py  build.py  create_usb_package.py  index.py  my-notes.txt  pyproject.toml  release.py  setup.py
.cursor/plans/: interactive_security_dashboard_ebad49de.plan.md
.github/workflows/: build.yml  ci-tests.yml  release.yml
legacy_backup/: config.py  index.py  yalla_script
legacy_backup/modules/: network_monitor.py  ui_renderer.py
modules/: __init__.py  info_display.py  system_monitor.py
tests/: test_smoke.py
yalla/: __init__.py  __main__.py  _version.py  index.py
yalla/modules/: __init__.py  info_display.py  network_monitor.py  system_monitor.py  ui_renderer.py
